# Arche-cpp

./: .gitmodules  CMakeLists.txt
application/: CMakeLists.txt  application.cpp  application.h  forward_application.cpp  forward_application.h  graphics_application.cpp  graphics_application.h
application/base/: background.h  layer.h  singleton.h  update_flag.cpp  update_flag.h  update_flag_manager.cpp  update_flag_manager.h
application/components/: camera.cpp  camera.h  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h  script.cpp  script.h  transform.cpp  transform.h
application/controls/: free_control.cpp  free_control.h  orbit_control.cpp  orbit_control.h  spherical.cpp  spherical.h
application/ecs/: component.cpp  component.h  components_manager.cpp  components_manager.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
application/gui/: gui.cpp  gui.h  imgui_impl_glfw.cpp  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_osx.h  imgui_impl_osx.mm
application/image/: image.cpp  image.h  stb.cpp  stb.h
application/light/: ambient_light.cpp  ambient_light.h  direct_light.cpp  direct_light.h  light.h  light_manager.cpp  light_manager.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
application/lighting/: ambient_light.cpp  cluster_debug_material.cpp  cluster_debug_material.h  direct_light.cpp  direct_light.h  light.cpp  light_manager.cpp  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
application/lighting/sprite/: sprite_debug.cpp  sprite_debug.h  sprite_debug_material.cpp  sprite_debug_material.h
application/material/: base_material.cpp  base_material.h  blinn_phong_material.cpp  blinn_phong_material.h  material.cpp  material.h  pbr_base_material.cpp  pbr_base_material.h  pbr_material.cpp  pbr_material.h  pbr_specular_material.cpp  pbr_specular_material.h  unlit_material.cpp  unlit_material.h
application/mesh/: buffer_mesh.cpp  buffer_mesh.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  model_mesh.cpp  model_mesh.h  primitive_mesh.cpp  primitive_mesh.h  sub_mesh.cpp  sub_mesh.h  wireframe_primitive_mesh.cpp  wireframe_primitive_mesh.h
application/platform/: glfw_window.cpp  glfw_window.h  input_events.cpp  input_events.h  platform.cpp  platform.h  unix_platform.cpp  unix_platform.h  window.cpp  window.h
application/rendering/: compute_pass.cpp  compute_pass.h  compute_pipeline_state.cpp  compute_pipeline_state.h  render_context.h  render_context.mm  render_element.cpp  render_element.h  render_pass.cpp  render_pass.h  render_pipeline_state.cpp  render_pipeline_state.h  resource_cache.cpp  resource_cache.h  subpass.cpp  subpass.h
application/shader/: macro_name.h  shader.cpp  shader.h  shader_common.h  shader_data.cpp  shader_data.h  shader_data_group.h  shader_macro_collection.cpp  shader_macro_collection.h  shader_pool.cpp  shader_pool.h  shader_pool.mm  shader_property.cpp  shader_property.h  shader_uniform.h
application/texture/: sampled_texture.cpp  sampled_texture.h  sampled_texture2d.cpp  sampled_texture2d.h  sampled_texture2d_view.cpp  sampled_texture2d_view.h  sampled_texture3d.cpp  sampled_texture3d.h  sampled_texturecube.cpp  sampled_texturecube.h  stb.cpp  stb.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  texture_utils.cpp  texture_utils.h
apps/: CMakeLists.txt  app_delegate.h  app_delegate.mm  blueprints.cpp  camera.cpp  delegate.cpp  delegate.h  editor_settings.cpp  main.cpp  main.mm  metal_swapchain.h  primitive_app.cpp  renderer.cpp  renderer.h  renderer.mm  selection.cpp  usd_helpers.cpp  usd_helpers.h  view_controller.h  view_controller.mm  view_delegate.h  view_delegate.mm  viewport.h  viewport.mm
apps/Base.lproj/: Main.storyboard
apps/base/: geometric_functions.h  imgui_helpers.cpp  imgui_helpers.h
apps/commands/: attribute_commands.cpp  command_stack.cpp  command_stack.h  commands_impl.cpp  commands_impl.h  layer_commands.cpp  prim_commands.cpp  sdf_command_group.cpp  sdf_command_group.h  sdf_command_group_recorder.cpp  sdf_command_group_recorder.h  sdf_layer_instructions.cpp  sdf_layer_instructions.h  sdf_undo_redo_recorder.cpp  sdf_undo_redo_recorder.h  undo_layer_state_delegate.cpp  undo_layer_state_delegate.h
apps/editor/: editor_settings.h
apps/manipulators/: camera_rig.h  manipulator.h
apps/widgets/: composition_editor.cpp  connection_editor.cpp  connection_editor.h  content_browser.cpp  content_browser.h  edit_list_selector.h  file_browser.cpp  file_browser.h  launcher_bar.h  modal_dialogs.h  sdf_attribute_editor.h  sdf_layer_scene_graph_editor.h  sdf_prim_editor.cpp  sdf_prim_editor.h  stage_layer_editor.h  stage_outliner.cpp  table_layouts.h  text_editor.h  text_filter.h  timeline.cpp  variant_editor.cpp  vt_array_editor.cpp  vt_array_editor.h  vt_value_editor.h
metal/: CMakeLists.txt  metal_api.h  metal_buffer.cpp  metal_buffer.h  metal_callback_context.cpp  metal_callback_context.h  metal_command_encoder.cpp  metal_command_encoder.h  metal_debug_capture.cpp  metal_debug_capture.h  metal_device.cpp  metal_device.h  metal_event.cpp  metal_event.h  metal_stage_buffer_pool.cpp  metal_stage_buffer_pool.h  metal_stream.cpp  metal_stream.h  metal_stream.mm  metal_swapchain.cpp  metal_swapchain.h  metal_swapchain_layer.mm  metal_texture.cpp  metal_texture.h
metal/compute/: buffer_utils.cpp  buffer_utils.h  gpu_capture.cpp  gpu_capture.h  gpu_counter.cpp  gpu_counter.h  image_utils.cpp  image_utils.h
metal/fg/: framegraph.cpp  framegraph.h  render_task.h  render_task_builder.h
usd/: CMakeLists.txt  camera.cpp  camera.h  cgltf_util.cpp  cgltf_util.h  converter.cpp  converter.h  file_format.cpp  file_format.h  guc.h  image.cpp  materialx.cpp  materialx.h  mesh.cpp  naming.cpp  naming.h  usd_preview_surface.cpp  usd_preview_surface.h  usd_primitive.cpp  usd_primitive.h  usd_renderer.cpp
usd/converter/: converter.h  debug_codes.cpp  debug_codes.h  file_format.h  guc.cpp  image.cpp  image.h  materialx.h  mesh.cpp  mesh.h  usd_preview_surface.h
usd/editor/: blueprints.h  debug.h  editor.cpp  editor.h  selection.h
(+198 files in other folders)
